--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,3 +21,4 @@ add_executable(FrontCamera src/FrontCamera.cpp)
 add_executable(LightSensor src/LightSensor.cpp)
 add_executable(HighBeams src/HighBeams.cpp)
 add_executable(Config src/Config.cpp)
+add_executable(ModeSelector src/ModeSelector.cpp)
